EEVEE Alpha Clip shadows actually using Alpha Hashed shadows #82385

Closed
opened 2020-11-03 23:07:33 +01:00 by Cycles · 8 comments

System Information
Operating system: Microsoft Windows 10 Pro
Graphics card: Nvidia GeForce GTX 1050
Processor: Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz, 3301 Mhz, 4 Core(s), 4 Logical Processor(s)

Blender Version
Broken: blender-2.91.0-42f6aada98a6-windows64
Broken: 2.90.1
Worked: 2.83.8

Short description of error
When a material's blending mode is set to Alpha Blend, Hashed, or Opaque, and setting the shadow mode to Alpha Clip, the shadow map does not use Alpha Clip and seems to use Alpha Hashed instead. Setting the shadow mode to anything else works fine. None of the parameters do anything, changing the clip threshold does nothing, turning on Backface Culling does nothing, I can't find any way to fix it.

Exact steps for others to reproduce the error
Alpha_Clip_Shadows_Bug.blend
Open blend file
Set mode to rendered view
Notice how the shadows look hashed, even though the shadow mode is clearly set to Alpha Clip.

**System Information** Operating system: Microsoft Windows 10 Pro Graphics card: Nvidia GeForce GTX 1050 Processor: Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz, 3301 Mhz, 4 Core(s), 4 Logical Processor(s) **Blender Version** Broken: blender-2.91.0-42f6aada98a6-windows64 Broken: 2.90.1 Worked: 2.83.8 **Short description of error** When a material's blending mode is set to Alpha Blend, Hashed, or Opaque, and setting the shadow mode to Alpha Clip, the shadow map does not use Alpha Clip and seems to use Alpha Hashed instead. Setting the shadow mode to anything else works fine. None of the parameters do anything, changing the clip threshold does nothing, turning on Backface Culling does nothing, I can't find any way to fix it. **Exact steps for others to reproduce the error** [Alpha_Clip_Shadows_Bug.blend](https://archive.blender.org/developer/F9186093/Alpha_Clip_Shadows_Bug.blend) Open blend file Set mode to rendered view Notice how the shadows look hashed, even though the shadow mode is clearly set to Alpha Clip.
Author

Added subscriber: @Cycles

Added subscriber: @Cycles
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, will check.

Confirmed, will check.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Caused by b18c2a3c41

Apparently, clip is now "emulated", see the commit message:

Change BLEND_CLIP to be emulated by gpu nodetree. Making less shader variations

But apparently this is not working as expected @fclem

Caused by b18c2a3c41 Apparently, clip is now "emulated", see the commit message: > Change BLEND_CLIP to be emulated by gpu nodetree. Making less shader variations But apparently this is not working as expected @fclem

This issue was referenced by 96e8dadda0

This issue was referenced by 96e8dadda0b2dda7ce771b1eba2d901a056a039f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-11-04 17:16:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82385
No description provided.