Fix T82385 EEVEE: Alpha Clip shadows actually using Alpha Hashed shadows

The shadow path was not using the alpha threshold.